Types was added

--- a/src/app/users-list/users-list.component.scss
+++ b/src/app/users-list/users-list.component.scss
@@ -5,3 +5,9 @@
   widows: 180px;
   display: inline-block;
 }
+.line {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  margin-top: 20px;
+}
